# Shotty

./: .gitignore  package-lock.json  package.json  readme.md
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  lib.rs  main.rs  s3.rs
ui/: app.js  canvas.js  highlight.html  index.html  styles.css
