[package]
name = "shotty"
version = "0.1.0"
edition = "2021"

[lib]
name = "shotty_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
tokio = { version = "1", features = ["full"] }
arboard = "3"
image = "0.25"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
tempfile = "3"

[target.'cfg(not(target_os = "macos"))'.dependencies]
xcap = "0.0.14"
